Rewrite elmslie-core to Kotlin Coroutines; update tests and docs.

--- a/elmslie-rxjava-3/build.gradle
+++ b/elmslie-rxjava-3/build.gradle
@@ -5,6 +5,7 @@ plugins {
 dependencies {
     implementation(project(":elmslie-core"))
     implementation(deps.rx.rxJava3)
+    implementation(deps.coroutines.rx3)
 
     testImplementation(project(":elmslie-test-rxjava-3"))
 }
