--- a/elmslie-samples/kotlin-calculator/build.gradle
+++ b/elmslie-samples/kotlin-calculator/build.gradle
@@ -2,11 +2,18 @@ plugins {
     id("kotlin")
 }
 
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
+    kotlinOptions.freeCompilerArgs += [
+            "-opt-in=kotlin.RequiresOptIn"
+    ]
+}
+
 dependencies {
     implementation(project(":elmslie-core"))
     implementation(project(":elmslie-rxjava-3"))
     implementation(deps.rx.rxJava3)
 
+    testImplementation(deps.coroutines.test)
     testImplementation(project(":elmslie-test"))
     testImplementation(project(":elmslie-test-rxjava-3"))
 }
