--- a/elmslie-android/build.gradle
+++ b/elmslie-android/build.gradle
@@ -9,6 +9,7 @@ dependencies {
     implementation(deps.android.appcompat)
     implementation(deps.android.appStartup)
     implementation(deps.android.lifecycle)
+    implementation(deps.android.lifecycleKtx)
 }
 
 apply from: "../gradle/junit-5.gradle"
