--- a/elmslie-core/build.gradle
+++ b/elmslie-core/build.gradle
@@ -2,10 +2,18 @@ plugins {
     id("kotlin")
 }
 
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
+    kotlinOptions.freeCompilerArgs += [
+            "-opt-in=kotlin.RequiresOptIn"
+    ]
+}
+
 dependencies {
+    implementation(deps.coroutines.core)
     testImplementation(project(":elmslie-test"))
     testImplementation(deps.test.kotestAssertions)
     testImplementation(deps.test.kotestProperty)
+    testImplementation(deps.coroutines.test)
     testRuntimeOnly(deps.test.kotestJunitRunner)
 }
 
