--- a/elmslie-rxjava-2/build.gradle
+++ b/elmslie-rxjava-2/build.gradle
@@ -5,6 +5,7 @@ plugins {
 dependencies {
     implementation(project(":elmslie-core"))
     implementation(deps.rx.rxJava2)
+    implementation(deps.coroutines.rx2)
 }
 
 apply from: "../gradle/junit-5.gradle"
