--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -15,6 +15,7 @@ ext.deps = [
                 appcompat                   : "androidx.appcompat:appcompat:1.4.2",
                 appStartup                  : "androidx.startup:startup-runtime:1.1.1",
                 lifecycle                   : "androidx.lifecycle:lifecycle-common:2.5.0",
+                lifecycleKtx                : "androidx.lifecycle:lifecycle-runtime-ktx:2.5.0",
                 lifecycleViewmodel          : "androidx.lifecycle:lifecycle-viewmodel:2.5.0",
                 lifecycleViewModelSavedState: "androidx.lifecycle:lifecycle-viewmodel-savedstate:2.5.0",
                 material                    : "com.google.android.material:material:1.6.1",
@@ -40,6 +41,8 @@ ext.deps = [
         ],
         coroutines: [
                 core: "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.2",
+                rx3 : "org.jetbrains.kotlinx:kotlinx-coroutines-rx3:1.6.2",
+                rx2 : "org.jetbrains.kotlinx:kotlinx-coroutines-rx2:1.6.2",
                 test: "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.2",
         ],
         test      : [
