--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -15,13 +15,13 @@ ext.deps = [
                 appcompat                   : "androidx.appcompat:appcompat:1.5.1",
                 appStartup                  : "androidx.startup:startup-runtime:1.1.1",
                 lifecycle                   : "androidx.lifecycle:lifecycle-common:2.5.1",
-                lifecycleViewmodel          : "androidx.lifecycle:lifecycle-viewmodel:2.5.1",
+                lifecycleViewModel          : "androidx.lifecycle:lifecycle-viewmodel:2.5.1",
                 lifecycleViewModelSavedState: "androidx.lifecycle:lifecycle-viewmodel-savedstate:2.5.1",
                 material                    : "com.google.android.material:material:1.6.1",
                 multidex                    : "androidx.multidex:multidex:2.0.1",
         ],
         compose   : [
-                activity      : "androidx.activity:activity-compose:1.4.0",
+                activity      : "androidx.activity:activity-compose:1.5.1",
                 foundation    : "androidx.compose.foundation:foundation:1.1.1",
                 iconsCore     : "androidx.compose.material:material-icons-core:1.1.1",
                 iconsExtended : "androidx.compose.material:material-icons-extended:1.1.1",
