--- a/settings.gradle
+++ b/settings.gradle
@@ -11,6 +11,8 @@ include ':elmslie-test-rxjava-3'
 
 include ':sample-android-loader'
 project(":sample-android-loader").projectDir = file("elmslie-samples/android-loader")
+include ':sample-store-linking'
+project(":sample-store-linking").projectDir = file("elmslie-samples/store-linking")
 include ':sample-compose-paging'
 project(":sample-compose-paging").projectDir = file("elmslie-samples/compose-paging")
 include ':sample-coroutines-loader'
