--- a/gradle.properties
+++ b/gradle.properties
@@ -27,6 +27,11 @@ kapt.incremental.apt=true
 # https://kotlinlang.org/docs/reference/kapt.html?_ga=2.52861352.147014511.1570608228-996117368.1567680991#compile-avoidance-for-kapt-since-1320
 kapt.include.compile.classpath=false
 #
+#
+# ----- Kotlin/Native features -----
+#
+kotlin.native.distribution.downloadFromMaven=true
+#
 # ----- AGP 4.0 build features -----
 #
 # disable build config generation
