binary compatibility validator

--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -31,6 +31,9 @@ jobs:
       - name: Run android lint
         run: ./gradlew lint
 
+      - name : Run api compatibility check
+        run: ./gradlew apiCheck
+
       - name: Build project
         run: ./gradlew assemble
 
