--- a/gradle.properties
+++ b/gradle.properties
@@ -47,6 +47,5 @@ android.defaults.buildfeatures.shaders=false
 #
 # ----- Config -----
 #
-libraryVersion=3.0.0-beta4
-pluginVersion=1.0.1
+libraryVersion=3.0.0
 libraryGroup=money.vivid.elmslie
